--- a/DjvuLib/DjvuLib.Shared/DjvuLib.Shared.vcxitems.filters
+++ b/DjvuLib/DjvuLib.Shared/DjvuLib.Shared.vcxitems.filters
@@ -150,6 +150,7 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)config.h">
       <Filter>djvulibre\Headers</Filter>
     </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)IBufferUtilities.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MSBuildThisFileDirectory)pch.cpp">
@@ -312,6 +313,7 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)libdjvu\IW44EncodeCodec.cpp">
       <Filter>djvulibre\Source</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)IBufferUtilities.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="djvulibre">
